--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - name: test 1
       id: test-1
       uses: classroom-resources/autograding-command-grader@v1
