--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        python -m spacy download fr_core_news_sm
 
     - name: Make run_command executable
       run: chmod +x ./run_command
