--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: Download French language model for spaCy
+      run: |
         python -m spacy download fr_core_news_sm
 
     - name: Make run_command executable
