--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -17,6 +17,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Download French language model for spaCy
+      run: |
+        python -m spacy download fr_core_news_sm
     - name: test 1
       id: test-1
       uses: classroom-resources/autograding-command-grader@v1
@@ -31,3 +34,4 @@ jobs:
         TEST-1_RESULTS: "${{steps.test-1.outputs.result}}"
       with:
         runners: test-1
+
