--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ pytest
 numpy
 requests
 spacy
+fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.2.0/fr_core_news_sm-3.2.0-py3-none-any.whl
