--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ numpy
 requests
 spacy
 fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.2.0/fr_core_news_sm-3.2.0-py3-none-any.whl
+numpy==1.21.6
